Map alignment fixing

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -19,3 +19,8 @@
 #question {
     padding-bottom: 5px;
 }
+
+.map {
+    margin-top: 5px;
+    margin-left: -10px;
+}
